// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots after field w/icon 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-1oolqwv=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="Some placeholder"
            />
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="close icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance default w/ error 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Problem field
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-utxo7p=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
            />
          </div>
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance default w/ iconAlign left 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-1ir2txp=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="The placeholder "
            />
          </div>
        </div>
        <div
          data-css-1w67sw9=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance default w/ iconAlign right 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-ajs356=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="The placeholder "
            />
          </div>
        </div>
        <div
          data-css-121dxw3=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance subtle w/ error 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Problem field
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-utxo7p=""
        >
          <div
            data-css-1talm5x=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
            />
          </div>
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance subtle w/ iconAlign left 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-1e3i43a=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="The placeholder "
            />
          </div>
        </div>
        <div
          data-css-1x5ndtu=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance subtle w/ iconAlign right 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-g760uo=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="The placeholder "
            />
          </div>
        </div>
        <div
          data-css-13qmv6x=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots disabled compare 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div>
      <label
        data-css-w0yocm=""
      >
        <div
          data-css-n53zhn=""
        >
          Normal
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            data-css-1xm24a9=""
          >
            <div
              data-css-177hkuc=""
            >
              <input
                data-css-lzb8ea=""
                disabled={false}
                placeholder="I'm normal, see"
              />
            </div>
          </div>
        </div>
        <div
          data-css-1de0a6a=""
        >
          Still normal
        </div>
      </label>
      <label
        data-css-1y0hkm3=""
      >
        <div
          data-css-n53zhn=""
        >
          I'm not usable
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            data-css-1xm24a9=""
          >
            <div
              data-css-177hkuc=""
            >
              <input
                data-css-lzb8ea=""
                disabled={true}
                placeholder="I'm untouchable"
              />
            </div>
          </div>
        </div>
        <div
          data-css-1de0a6a=""
        >
          Neither am I
        </div>
      </label>
      <label
        data-css-1y0hkm3=""
      >
        <div
          data-css-n53zhn=""
        >
          Disbled and errored
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            data-css-utxo7p=""
          >
            <div
              data-css-177hkuc=""
            >
              <input
                data-css-lzb8ea=""
                disabled={true}
                placeholder="I'm untouchable"
              />
            </div>
          </div>
          <div
            data-css-loo18p=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          data-css-1de0a6a=""
        >
          Neither am I
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots labels all 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="Some placeholder"
            />
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels all w/error 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-utxo7p=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="Some placeholder"
            />
          </div>
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels label 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels label and subLabel 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
            />
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels long placeholder 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="some placeholder that goes on forever when the little things can't handle it"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels none 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels placeholder 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="some placeholder"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels subLabel 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
            />
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots layouts full width 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid blue",
          "width": "500px",
        }
      }
    >
      <label
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          First
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            data-css-1xm24a9=""
          >
            <div
              data-css-177hkuc=""
            >
              <input
                data-css-lzb8ea=""
                disabled={false}
              />
            </div>
          </div>
        </div>
      </label>
      <label
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Second
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            data-css-utxo7p=""
          >
            <div
              data-css-177hkuc=""
            >
              <input
                data-css-lzb8ea=""
                disabled={false}
              />
            </div>
          </div>
          <div
            data-css-loo18p=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
      <label
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Third
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            data-css-1xm24a9=""
          >
            <div
              data-css-1talm5x=""
            >
              <input
                data-css-lzb8ea=""
                disabled={false}
              />
            </div>
          </div>
        </div>
      </label>
      <label
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Fourth
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            data-css-utxo7p=""
          >
            <div
              data-css-1talm5x=""
            >
              <input
                data-css-lzb8ea=""
                disabled={false}
              />
            </div>
          </div>
          <div
            data-css-loo18p=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots layouts right-aligned 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid blue",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <label
          data-css-w0yocm=""
        >
          <div
            data-css-1r967oi=""
          >
            <div
              data-css-1xm24a9=""
            >
              <div
                data-css-1e3i43a=""
              >
                <input
                  data-css-lzb8ea=""
                  disabled={false}
                  placeholder="Search"
                />
              </div>
            </div>
            <div
              data-css-1x5ndtu=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="search icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21.707 20.294L16.314 14.9A7.928 7.928 0 0018 10a7.948 7.948 0 00-2.344-5.656A7.942 7.942 0 0010 2a7.94 7.94 0 00-5.656 2.344A7.944 7.944 0 002 10a7.94 7.94 0 002.344 5.656A7.94 7.94 0 0010 18a7.927 7.927 0 004.9-1.685l5.393 5.393 1.414-1.414zM10 16a5.959 5.959 0 01-4.242-1.757A5.958 5.958 0 014 10c0-1.602.624-3.109 1.758-4.242A5.956 5.956 0 0110 4c1.602 0 3.109.624 4.242 1.758A5.957 5.957 0 0116 10c0 1.603-.624 3.11-1.758 4.243A5.96 5.96 0 0110 16z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        style={
          Object {
            "border": "3px solid green",
            "height": "50px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots whitelist name 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              name="myFieldNameOfPower"
              placeholder="I have a form name"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist onChange 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              onChange={[Function]}
              placeholder="Change me"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist title 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              title="some title"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist type=date 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="Date"
              type="date"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist type=password 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              placeholder="Password"
              type="password"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
